--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,5 +6,19 @@ body {
 }
 
 h1 {
+font-weight: normal;
+font-size: 50px;
+}
 
+a {
+  color: Aquamarine;
+  font-size: 16px;
+}
+
+p {
+  display: block;
+}
+
+video {
+  position: relative;
 }
