--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,17 @@ p {
   display: block;
 }
 
-video {
-  position: relative;
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+.p {
+  color: Gray;
+  font-size: 21px;
+}
+
+.copyright {
+  text-align: right;
+  color: Gray;
 }
